RESOLVED FIXED 46396
[GTK] Some tests from r68174 fail on the GTK+ bots
https://bugs.webkit.org/show_bug.cgi?id=46396
Summary [GTK] Some tests from r68174 fail on the GTK+ bots
Martin Robinson
Reported 2010-09-23 13:08:03 PDT
It looks like the issue here is that the preference override for enable-hyperlink-auditing is not working.
Attachments
Patch for this issue (8.85 KB, patch)
2010-09-23 13:22 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-09-23 13:22:19 PDT
Created attachment 68578 [details] Patch for this issue
Martin Robinson
Comment 2 2010-09-23 14:37:01 PDT
Comment on attachment 68578 [details] Patch for this issue Clearing flags on attachment: 68578 Committed r68199: <http://trac.webkit.org/changeset/68199>
Martin Robinson
Comment 3 2010-09-23 14:37:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.